# cxxtp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh
cmake/analyzer/: clang_tidy.cmake  cppcheck.cmake
cmake/compiler/: common_compiler_flags.cmake
cmake/info_provider/: git_revision_description.cmake  meta_information_generator.cmake
cmake/info_provider/templates/: meta_information.hxx.in
cmake/package_helper/: curl.cmake  fontconfig.cmake  freetype.cmake  ncurses.cmake  qt.cmake  sdl2.cmake  threads.cmake  x11.cmake  xcb.cmake
cmake/sanitizer/: address.cmake  leak.cmake  memory.cmake  thread.cmake  undefined_behavior.cmake
cmake/utilities/: available_linker_check.cmake  build_type_handler.cmake  common_compiler_flags.cmake  compiler_flag_check.cmake  git_revision_description.cmake  postbuild_strip_command.cmake  target_configuration.cmake
cmake/utilities/templates/: meta_information.hxx.in
cmake/utility/: available_linker_check.cmake  build_type_handler.cmake  postbuild_strip_command.cmake  target_configuration.cmake  target_property_copy.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.template  CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/library_target_name/src/performance_test/: CMakeLists.txt
test/library_target_name/src/specification_test/: CMakeLists.txt
